fix movie background text-contrast

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,18 @@
 .main-box{
     width: 100%;
     height: 400px;
-    
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: overlay;
+}
+.layout{
+    position: relative;
+    top: 0px;
+    opacity: 0.8;
+    width: 100%;
+    height: 400px;
+    background-color: black;
 }
 .main-text{
     position: relative;
@@ -14,6 +21,9 @@
 }
 .summary p{
     width: 70%;
+    max-height: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .genre{
     list-style: none;
